## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	installIlmCtl.cmd \
        installIlmCtlMath.cmd \
        installIlmCtlSimd.cmd \
        vc7 \
        vc7/CTL \
        vc7/CTL/CTL.sln \
        vc7/CTL/CTL.suo \
        vc7/CTL/IlmCtl \
        vc7/CTL/IlmCtl/IlmCtl.vcproj \
        vc7/CTL/IlmCtl/Debug \
        vc7/CTL/IlmCtl/Release \
        vc7/CTL/IlmCtlMath \
        vc7/CTL/IlmCtlMath/IlmCtlMath.vcproj \
        vc7/CTL/IlmCtlMath/Debug \
        vc7/CTL/IlmCtlMath/Release \
        vc7/CTL/IlmCtlMathTest \
        vc7/CTL/IlmCtlMathTest/IlmCtlMathTest.vcproj \
        vc7/CTL/IlmCtlMathTest/Debug \
        vc7/CTL/IlmCtlMathTest/Release \
        vc7/CTL/IlmCtlSimd \
        vc7/CTL/IlmCtlSimd/IlmCtlSimd.vcproj \
        vc7/CTL/IlmCtlSimd/Debug \
        vc7/CTL/IlmCtlSimd/Release \
        vc7/CTL/IlmCtlTest \
        vc7/CTL/IlmCtlTest/IlmCtlTest.vcproj \
        vc7/CTL/IlmCtlTest/Debug \
        vc7/CTL/IlmCtlTest/Release \
        vc7/CTL/debug \
        vc7/CTL/release
