## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	installIlmCtl.cmd \
        installIlmCtlMath.cmd \
        installIlmCtlSimd.cmd \
        vc7/CTL/CTL.sln \
        vc7/CTL/CTL.suo \
        vc7/CTL/IlmCtl/IlmCtl.vcproj \
        vc7/CTL/IlmCtl/Debug/.cvsignore \
        vc7/CTL/IlmCtl/Release/.cvsignore \
        vc7/CTL/IlmCtlMath/IlmCtlMath.vcproj \
        vc7/CTL/IlmCtlMath/Debug/.cvsignore \
        vc7/CTL/IlmCtlMath/Release/.cvsignore \
        vc7/CTL/IlmCtlMathTest/IlmCtlMathTest.vcproj \
        vc7/CTL/IlmCtlMathTest/Debug/.cvsignore \
        vc7/CTL/IlmCtlMathTest/Release/.cvsignore \
        vc7/CTL/IlmCtlSimd/IlmCtlSimd.vcproj \
        vc7/CTL/IlmCtlSimd/Debug/.cvsignore \
        vc7/CTL/IlmCtlSimd/Release/.cvsignore \
        vc7/CTL/IlmCtlTest/IlmCtlTest.vcproj \
        vc7/CTL/IlmCtlTest/Debug/.cvsignore \
        vc7/CTL/IlmCtlTest/Release/.cvsignore \
        vc7/CTL/debug/.cvsignore \
        vc7/CTL/release/.cvsignore
