## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	installIlmCtl.cmd \
        installIlmCtlMath.cmd \
        installIlmCtlSimd.cmd \
        buildLUTs.cmd \
        vc7/CTL/CTL.sln \
        vc7/CTL/IlmCtl/IlmCtl.vcproj \
        vc7/CTL/IlmCtl/Debug/.cvsignore \
        vc7/CTL/IlmCtl/Release/.cvsignore \
        vc7/CTL/IlmCtlMath/IlmCtlMath.vcproj \
        vc7/CTL/IlmCtlMath/Debug/.cvsignore \
        vc7/CTL/IlmCtlMath/Release/.cvsignore \
        vc7/CTL/IlmCtlMathTest/IlmCtlMathTest.vcproj \
        vc7/CTL/IlmCtlMathTest/Debug/.cvsignore \
        vc7/CTL/IlmCtlMathTest/Release/.cvsignore \
        vc7/CTL/IlmCtlSimd/IlmCtlSimd.vcproj \
        vc7/CTL/IlmCtlSimd/Debug/.cvsignore \
        vc7/CTL/IlmCtlSimd/Release/.cvsignore \
        vc7/CTL/IlmCtlTest/IlmCtlTest.vcproj \
        vc7/CTL/IlmCtlTest/Debug/.cvsignore \
        vc7/CTL/IlmCtlTest/Release/.cvsignore \
        vc7/CTL/debug/.cvsignore \
        vc7/CTL/release/.cvsignore \
        vc8/CTL/CTL.sln \
        vc8/CTL/IlmCtl/IlmCtl.vcproj \
        vc8/CTL/IlmCtl/Debug/.cvsignore \
        vc8/CTL/IlmCtl/Release/.cvsignore \
        vc8/CTL/IlmCtlMath/IlmCtlMath.vcproj \
        vc8/CTL/IlmCtlMath/Debug/.cvsignore \
        vc8/CTL/IlmCtlMath/Release/.cvsignore \
        vc8/CTL/IlmCtlMathTest/IlmCtlMathTest.vcproj \
        vc8/CTL/IlmCtlMathTest/Debug/.cvsignore \
        vc8/CTL/IlmCtlMathTest/Release/.cvsignore \
        vc8/CTL/IlmCtlSimd/IlmCtlSimd.vcproj \
        vc8/CTL/IlmCtlSimd/Debug/.cvsignore \
        vc8/CTL/IlmCtlSimd/Release/.cvsignore \
        vc8/CTL/IlmCtlTest/IlmCtlTest.vcproj \
        vc8/CTL/IlmCtlTest/Debug/.cvsignore \
        vc8/CTL/IlmCtlTest/Release/.cvsignore \
        vc8/CTL/debug/.cvsignore \
        vc8/CTL/release/.cvsignore

