## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
        installIlmImfCtl.cmd \
        vc7 \
        vc7/OpenEXR_CTL \
        vc7/OpenEXR_CTL/OpenEXR_CTL.sln \
        vc7/OpenEXR_CTL/OpenEXR_CTL.suo \
        vc7/OpenEXR_CTL/IlmImfCtl \
        vc7/OpenEXR_CTL/IlmImfCtl/IlmImfCtl.vcproj \
        vc7/OpenEXR_CTL/IlmImfCtl/Debug \
        vc7/OpenEXR_CTL/IlmImfCtl/Release \
        vc7/OpenEXR_CTL/IlmImfCtlTest \
        vc7/OpenEXR_CTL/IlmImfCtlTest/IlmImfCtlTest.vcproj \
        vc7/OpenEXR_CTL/IlmImfCtlTest/Debug \
        vc7/OpenEXR_CTL/IlmImfCtlTest/Release \
        vc7/OpenEXR_CTL/debug \
        vc7/OpenEXR_CTL/release


