## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
        installIlmImfCtl.cmd \
        vc7/OpenEXR_CTL/OpenEXR_CTL.sln \
        vc7/OpenEXR_CTL/OpenEXR_CTL.suo \
        vc7/OpenEXR_CTL/IlmImfCtl/IlmImfCtl.vcproj \
        vc7/OpenEXR_CTL/IlmImfCtl/Debug/.cvsignore \
        vc7/OpenEXR_CTL/IlmImfCtl/Release/.cvsignore \
        vc7/OpenEXR_CTL/IlmImfCtlTest/IlmImfCtlTest.vcproj \
        vc7/OpenEXR_CTL/IlmImfCtlTest/Debug/.cvsignore \
        vc7/OpenEXR_CTL/IlmImfCtlTest/Release/.cvsignore \
        vc7/OpenEXR_CTL/debug/.cvsignore \
        vc7/OpenEXR_CTL/release/.cvsignore


